# FastapiTester

./: .gitignore  main.py  pyproject.toml
api/: __init__.py  _base.py
configs/: __init__.py  logger_settings.py  settings.py
swagger/: __init__.py  loaders.py
tests/web/: main.py  models.py
