[tool.poetry]
name = "fastapitester"
version = "0.1.0"
description = ""
authors = ["IX <borntokill.ix@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.27.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-select = ["Q"]
format.quote-style = "single"
line-length = 88
indent-width = 4
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "C", # flake8-comprehensions
    "I", # isort
    "B", # flake8-bugbear
    "UP", # pyupgrade
]

ignore = [
    "C901", # too complex
    "B904", # except clause
]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"
inline-quotes = "single"

[tool.ruff.isort]
split-on-trailing-comma = true
combine-as-imports = true

[tool.ruff.lint.isort]
known-third-party = ["bound"]